--- a/server/api/auth/templates/login.html
+++ b/server/api/auth/templates/login.html
@@ -1,3 +1,19 @@
-<h1>
-    Login
-</h1>
+{% extends 'layout.html' %}
+
+{% block body %}
+	<div class="container">
+		<div class="col-md-4">
+		<center>
+			<h1 class="margin-top-30">Log In</h1>
+			<br>
+			<input type="email" placeholder="Email Address" class="form-control">
+			<br>
+			<input type="password" placeholder="Password" class="form-control">
+			<br>
+			<button type="submit" class="btn btn-primary margin-bottom-10">Login</button>
+			<br>
+			<p>No account?<a href="#/signup">Sign up!</a></p>
+		</center>
+		</div>
+	</div>
+{% endblock%}
