added form for signup

--- a/server/api/auth/templates/landing.html
+++ b/server/api/auth/templates/landing.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Culunary Master</title>
-</head>
-<body>
-	landing page
-</body>
-</html>
+{% extends 'layout.html' %}
+
+{% block body %}
+	landing
+{% endblock%}
