--- a/server/api/auth/templates/signup.html
+++ b/server/api/auth/templates/signup.html
@@ -1,1 +1,34 @@
-Sign up
+{% extends 'layout.html' %}
+
+{% block body %}
+
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4">
+			</div>
+			<div class="col-md-4 margin-top-30">
+				<center>
+					<h1>Sign Up</h1>
+					<br>
+					<div class="sign-up-form">
+						<form action="/signUp" method="POST">
+						<input class="form-control" type="text" name="firstName" placeholder="First Name" required="">
+						<br>
+						<input class="form-control" type="text" name="lastName" placeholder="Last Name" required="">
+						<br>
+						<input class="form-control" type="email" name="email" placeholder="example@gmail.com" required="">
+						<br>
+						<input class="form-control" type="password" name="passowrd" placeholder="password" required="">
+						<br>
+						<button type="submit" class="btn btn-primary">Create Account</button>
+						<br>
+						Have an account? <a href="/login">Login!</a>
+					</form>
+					</div>
+				</center>
+			</div>
+			<div class="col-md-4">
+			</div>
+		</div>
+	</div>
+{% endblock%}
