--- a/server/api/auth/templates/login.html
+++ b/server/api/auth/templates/login.html
@@ -1,19 +1,29 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-	<div class="container">
-		<center>
-			<h1 class="margin-top-30">Log In</h1>
-			<br>
-			<form action="/login" method="post">
-				<input type="email" placeholder="Email Address" class="form-control">
+<div class="container">
+	<div class="row">
+		<div class="col-md-4">
+		</div>
+		<div class="col-md-4 margin-top-30">
+			<center>
+				<h1>Log In</h1>
 				<br>
-				<input type="password" placeholder="Password" class="form-control">
-				<br>
-				<button type="submit" class="btn btn-primary margin-bottom-10">Login</button>
-			</form>
-			<br>
-			<p>No account?<a href="#/signup">Sign up!</a></p>
-		</center>
+				<div class="sign-up-form">
+					<form action="/login" method="POST">
+					<input class="form-control" type="email" name="email" placeholder="example@gmail.com" required="">
+					<br>
+					<input class="form-control" type="password" name="passowrd" placeholder="password" required="">
+					<br>
+					<button type="submit" class="btn btn-primary">Create Account</button>
+					<br>
+					<p>No account?<a href="#/signup">Sign up!</a></p>
+				</form>
+				</div>
+			</center>
+		</div>
+		<div class="col-md-4">
+		</div>
 	</div>
+</div>
 {% endblock%}
