added an anchor tag on landing, will add pictures and style it later

--- a/server/api/auth/templates/landing.html
+++ b/server/api/auth/templates/landing.html
@@ -1,5 +1,10 @@
-{% extends 'layout.html' %}
-
-{% block body %}
-	landing
-{% endblock%}
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Culunary Master</title>
+	 <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+</head>
+<body>
+		<a href="/login"><i class="fas fa-paw"></i>Get Started!</a>
+</body>
+</html>
