--- a/server/api/auth/templates/signup.html
+++ b/server/api/auth/templates/signup.html
@@ -10,21 +10,20 @@
 				<center>
 					<h1>Sign Up</h1>
 					<br>
-					<div class="sign-up-form">
-						<form action="/signUp" method="POST">
-						<input class="form-control" type="text" name="firstName" placeholder="First Name" required="">
-						<br>
-						<input class="form-control" type="text" name="lastName" placeholder="Last Name" required="">
-						<br>
-						<input class="form-control" type="email" name="email" placeholder="example@gmail.com" required="">
-						<br>
-						<input class="form-control" type="password" name="passowrd" placeholder="password" required="">
-						<br>
-						<button type="submit" class="btn btn-primary">Create Account</button>
+                                        <div class="sign-up-form">
+                                                {% from "_form_field.html" import render_field %}
+                                                Sign Up
+                                                <form action="/signup" method="POST">
+                                                        {{ form.csrf_token }}
+                                                        {{ render_field(form.first_name, "form-control") }}
+                                                        {{ render_field(form.last_name, "form-control") }}
+                                                        {{ render_field(form.email, "form-control") }}
+                                                        {{ render_field(form.password, "form-control") }}
+                                                        <input type="submit" class="btn btn-primary" value="Create Account">
+                                                </form>
 						<br>
 						Have an account? <a href="/login">Login!</a>
-					</form>
-					</div>
+                                        </div>
 				</center>
 			</div>
 			<div class="col-md-4">
