--- a/server/api/auth/templates/layout.html
+++ b/server/api/auth/templates/layout.html
@@ -6,7 +6,7 @@
 	<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
   	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-  	<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='layout.css')}}"
+  	<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 </head>
 <body>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
@@ -19,7 +19,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<div id="logo">
-					<a href="#" class="navbar-brand"><i class="fas fa-utensils"></i> | Culunary Master</a>
+					<a href="/profile" class="navbar-brand"><i class="fas fa-utensils"></i> | Culunary Master</a>
 				</div>
 			</div>
 
@@ -31,8 +31,8 @@
 					<button type="submit" class="btn btn-default">Submit</button>
 				</form>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#"><i class="far fa-heart fa-lg"></i></a></li>
-					<li><a href="#"><i class="far fa-user fa-lg"></i></a></li>
+					<li><a href="/preference"><i class="far fa-heart fa-lg"></i></a></li>
+					<li><a href="/profile"><i class="far fa-user fa-lg"></i></a></li>
 				</ul>
 			</div>
 		</div>
@@ -43,7 +43,7 @@
 		<div class="jumbotron">
 			<h2><i class="fas fa-chart-pie fa-2x"></i> Let's Get Creative With Food!</h2>
 			<p>The Web Application That Help You Reach Your Diet Goal!</p>
-			<a href="newPost.html" id="newPost"><i class="fas fa-plus-circle"></i> New Inventory</a>
+			<a href="/newInventory" id="newPost"><i class="fas fa-plus-circle"></i> New Inventory</a>
 		</div>
 	</div>
 
