--- a/server/api/recipe/templates/newInventory.html
+++ b/server/api/recipe/templates/newInventory.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>New Inventory</title>
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js">
-	<link rel="stylesheet" type="text/css" href="/static/todos.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
-	<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-</head>
-<body>
 
-<div id="container">
+{% extends 'layout.html' %}
+
+{% block body %}
+
+<div class="container">
+	<div id="container">
 	<h1>New Inventory <i class="fa fa-plus"></i></h1>
-	<input type="text" placeholder="Add New To-Do">
+	<input type="text" placeholder="Add New Inventory">
 
 
 	<ul>
@@ -21,7 +16,8 @@
 
 	</ul>
 </div>
+</div>
 
-<script type="text/javascript" src="/static/todos.js"></script>
-</body>
-</html>
+
+
+{% endblock%}
