--- a/server/api/recipe/templates/newInventory.html
+++ b/server/api/recipe/templates/newInventory.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>New Inventory</title>
-	<script type="text/javascript" src="{{ url_for('static', filename='js/lib/jquery-3.3.1.min.js') }}"></script>
-	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/inventory.css') }}">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
-	<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-</head>
-<body>
-<div class="container">
+{% extends 'layout.html' %}
+
+{% block body %}
+
+<div id="inventory" class="container">
 	<div id="container">
-		<h1>New Inventory <i class="fa fa-plus"></i></h1>
-		<input type="text" placeholder="Add New Inventory">
+		<h1>New Inventory <a href="/recipe"><i class="fa fa-plus"></i></a></h1>
+		
+		<input type="text" placeholder="Add Groceries to Inventory">
 
 
 		<ul>
@@ -22,8 +17,5 @@
 		</ul>
 	</div>
 </div>
-<script type="text/javascript" src="{{url_for('static', filename='js/inventory.js')}}"></script>
-</body>
-</html>
 
-
+{% endblock%}
