--- a/server/static/css/inventory.css
+++ b/server/static/css/inventory.css
@@ -1,6 +1,11 @@
+#inventory {
+	background: #B3FFAB;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #12FFF7, #B3FFAB);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #12FFF7, #B3FFAB); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	font-family: Roboto;
+}
 
-
-h1{
+#inventory h1{
 	background: #2980b9;
 	color: white;
 	margin: 0;
@@ -10,29 +15,29 @@ h1{
 	font-weight: normal;
 }
 
-ul {
+#inventory ul {
 	list-style: none;
 	margin: 0;
 	padding: 0;
 }
 
-li:hover span{
+#inventory li:hover span{
 	width: 40px;
 	opacity: 1;
 }
 
-li{
+#inventory li{
 	background: white;
 	height: 40px;
 	line-height: 40px;
 	color: #666;
 }
 
-li:nth-child(2n){
+#inventory li:nth-child(2n){
 	background: #f7f7f7;
 }
 
-span{
+#inventory span{
 	background: #e73c4c;
 	height: 40px;
 	margin-right: 20px;
@@ -44,7 +49,7 @@ span{
 	opacity: 0;
 }
 
-input{
+#inventory input{
 	font-size: 18px;
 	background: #f7f7f7;
 	width: 100%;
@@ -54,19 +59,19 @@ input{
 	border: 3px solid rgba(0,0,0,0);
 }
 
-input:focus{
+#inventory input:focus{
 	background:white;
 	border: 3px solid #2980b9;
 }
 
-#container{
+#inventory #container{
 	box-shadow: 0 0 3px rgba(0,0,0,0,1);
 	width: 350px;
 	margin: 100px auto;
 	background: #f7f7f7;
 }
 
-
-.fa-plus{
+#inventory .fa-plus{
 	float: right;
+	color: white;
 }
