--- a/server/api/profile/templates/profile.html
+++ b/server/api/profile/templates/profile.html
@@ -2,6 +2,29 @@
 
 {% block body %}
 
+<div id="profile" class="container">
+	<div id="card" class="ui card">
+		<div class="image">
+			<img src="http://www.personalbrandingblog.com/wp-content/uploads/2017/08/blank-profile-picture-973460_640-300x300.png">
+		</div>
+		<div class="content">
+			<p class="header">Duoc Nguyen <a href="/profile"><i class="fas fa-edit"></i></a></p>
+			<div class="meta">
+				<span class="email">test@gmail.com</span>
+				<span class="date">Joined 2018</span>
+			</div>
+			<div class="description">
+				This is where you put your user pref
+			</div>
+		</div>
+		<div class="extra content">
+			<a href="#">
+				<i class="fas fa-inventory"></i>
+				10 Inventories
+			</a>
+		</div>
+	</div>
+</div>
 
 
 
