added edit profile page and form fields for get/post method

--- a/server/api/auth/templates/layout.html
+++ b/server/api/auth/templates/layout.html
@@ -7,7 +7,7 @@
   	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   	<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-  	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.0/semantic.min.css">
+  	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.0/components/card.min.css">
 
 
 	<script type="text/javascript" src="{{ url_for('static', filename='js/lib/jquery-3.3.1.min.js') }}"></script>
