--- a/server/api/auth/templates/login.html
+++ b/server/api/auth/templates/login.html
@@ -3,9 +3,9 @@
 {% block body %}
 <div class="container">
 	<div class="row">
-		<div class="col-md-4">
+		<div class="col-md-4 col-sm-4">
 		</div>
-		<div class="col-md-4 margin-top-30">
+		<div class="col-md-4 col-sm-4 margin-top-30">
 			<center>
 				<h1>Log In</h1>
 				<br>
@@ -24,7 +24,7 @@
 				</div>
 			</center>
 		</div>
-		<div class="col-md-4">
+		<div class="col-md-4 col-sm-4">
 		</div>
 	</div>
 </div>
