--- a/server/api/profile/templates/profile.html
+++ b/server/api/profile/templates/profile.html
@@ -8,7 +8,7 @@
 			<img src="http://www.personalbrandingblog.com/wp-content/uploads/2017/08/blank-profile-picture-973460_640-300x300.png">
 		</div>
 		<div class="content">
-			<p class="header">Duoc Nguyen <a href="/profile"><i class="fas fa-edit"></i></a></p>
+			<p class="header">User Name Goes Here<a href="/profile/edit"><i class="fas fa-edit"></i></a></p>
 			<div class="meta">
 				<span class="email">test@gmail.com</span>
 				<span class="date">Joined 2018</span>
@@ -19,13 +19,12 @@
 		</div>
 		<div class="extra content">
 			<a href="#">
-				<i class="fas fa-inventory"></i>
-				10 Inventories
+				<i class="far fa-folder-open"></i>
+				10 inventories
 			</a>
 		</div>
 	</div>
 </div>
-
 
 
 {% endblock%}
