--- a/server/api/profile/templates/profile.html
+++ b/server/api/profile/templates/profile.html
@@ -5,10 +5,10 @@
 <div id="profile" class="container">
 	<div id="card" class="ui card">
 		<div class="image">
-			<img src="http://www.personalbrandingblog.com/wp-content/uploads/2017/08/blank-profile-picture-973460_640-300x300.png">
+			<img src={{data.image}}>
 		</div>
 		<div class="content">
-			<p class="header">User Name Goes Here<a href="/profile/edit"><i class="fas fa-edit"></i></a></p>
+			<p class="header">{{data.name}}<a href="/profile/edit"><i class="fas fa-edit"></i></a></p>
 			<div class="meta">
 				<span class="email">test@gmail.com</span>
 				<span class="date">Joined 2018</span>
