--- a/server/api/auth/templates/layout.html
+++ b/server/api/auth/templates/layout.html
@@ -16,6 +16,7 @@
 
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/profile.css') }}">
 
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/recipe.css') }}">
 </head>
 <body>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
