:tada: Can show ingridient data from database

--- a/server/api/profile/templates/profile.html
+++ b/server/api/profile/templates/profile.html
@@ -5,7 +5,8 @@
 <div id="profile" class="container">
 	<div id="card" class="ui card">
 		<div class="image">
-			<img src={{data.image}}>
+			<img src='http://www.personalbrandingblog.com/wp-content/uploads/2017/08/blank-profile-picture-973460_640-300x300.png'>
+
 		</div>
 		<div class="content">
                         <p class="header">{{data.first_name}} {{ data.last_name }}<a href="/profile/edit"><i class="fas fa-edit"></i></a></p>
