--- a/server/api/auth/templates/layout.html
+++ b/server/api/auth/templates/layout.html
@@ -29,7 +29,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<div id="logo">
-					<a href="/profile" class="navbar-brand"><i class="fas fa-utensils"></i> | Culunary Master</a>
+					<a href="/recipe" class="navbar-brand"><i class="fas fa-utensils"></i> | Culunary Master</a>
 				</div>
 			</div>
 
