complete updating user image

--- a/server/api/profile/templates/profile.html
+++ b/server/api/profile/templates/profile.html
@@ -5,7 +5,7 @@
 <div id="profile" class="container">
 	<div id="card" class="ui card">
 		<div class="image">
-			<img src='http://www.personalbrandingblog.com/wp-content/uploads/2017/08/blank-profile-picture-973460_640-300x300.png'>
+			<img src={{data.image}}>
 
 		</div>
 		<div class="content">
