--- a/server/api/auth/templates/layout.html
+++ b/server/api/auth/templates/layout.html
@@ -5,7 +5,6 @@
   	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
   	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-  	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   	<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
   	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.0/components/card.min.css">
 
@@ -17,6 +16,7 @@
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/profile.css') }}">
 
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/recipe.css') }}">
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
