--- a/server/api/auth/templates/landing.html
+++ b/server/api/auth/templates/landing.html
@@ -3,8 +3,18 @@
 <head>
 	<title>Culunary Master</title>
 	 <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+	 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/landing.css') }}">
 </head>
 <body>
-		<a href="/login"><i class="fas fa-paw"></i>Get Started!</a>
+	
+<div class="video">
+     <iframe frameborder="0" width="100%" height="100%" 
+      	src="https://www.youtube.com/embed/PZ4pctQMdg4?controls=0&showinfo=0&rel=0&autoplay=1&loop=1"></iframe>
+     
+ </div>
+<div id="getStarted">
+	<a href="/login"><i class="fas fa-paw"></i>Get Started!</a>
+</div>
+			
 </body>
 </html>
