:tada: Fixed the typo "Culinary"

--- a/server/api/auth/templates/landing.html
+++ b/server/api/auth/templates/landing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Culunary Master</title>
+	<title>Culiunary Master</title>
 	 <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 	 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/landing.css') }}">
 </head>
