--- a/server/api/auth/templates/layout.html
+++ b/server/api/auth/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Culunary Master</title>
+	<title>Culiunary Master</title>
   	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
   	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
@@ -25,7 +25,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<div id="logo">
-					<a href="/recipe" class="navbar-brand"><i class="fas fa-utensils"></i> | Culunary Master</a>
+					<a href="/recipe" class="navbar-brand"><i class="fas fa-utensils"></i> | Culiunary Master</a>
 				</div>
 			</div>
 
