:tada: Basic front end for preference page

--- a/server/api/profile/templates/profile.html
+++ b/server/api/profile/templates/profile.html
@@ -24,6 +24,12 @@
 				10 inventories
 			</a>
 		</div>
+		<div class="extra content">
+			<a href="/preference">
+				<i class="far fa-folder-open"></i>
+                                Update your preference
+			</a>
+		</div>
 	</div>
 </div>
 
