--- a/server/api/preference/templates/preference.html
+++ b/server/api/preference/templates/preference.html
@@ -5,26 +5,15 @@
 <div id="profile" class="container">
 	<div id="card" class="ui card">
                 <h3>Update your preference</h3>
+                <h4>Your current allergies</h4>
+                {% for elem in allergies %}
+                        <li>{{ elem.name }}</li>
+                {% endfor %}
 		{% from "_form_field.html" import render_field %}
 		<form action="/preference" method="POST">
 			<div class="content">
                                 {{ form.csrf_token }}
-                                {{ render_field(form.first_name, "form-control") }}
-                                {{ render_field(form.last_name, "form-control") }}
-                                {{ render_field(form.imageURL, "form-control") }}
-				<div class="meta">
-					<span class="email">test@gmail.com</span>
-					<span class="date">Joined 2018</span>
-				</div>
-				<div class="description">
-					This is where you put your user pref
-				</div>
-			</div>
-			<div class="extra content">
-				<p href="#">
-					<i class="far fa-folder-open"></i>
-					10 inventories
-				</p>
+                                {{ render_field(form.allergy, "form-control") }}
 			</div>
 			<button type="submit" class="btn btn-primary">Save</button>
 		</div>
