added diet pref

--- a/server/api/preference/templates/preference.html
+++ b/server/api/preference/templates/preference.html
@@ -14,6 +14,8 @@
 			<div class="content">
                                 {{ form.csrf_token }}
                                 {{ render_field(form.allergy, "form-control") }}
+                <h4>Select Your Diet Preference</h4>
+                                {{ render_field(form.diet_pref, "form-control") }}
 			</div>
 			<button type="submit" class="btn btn-primary">Save</button>
 		</div>
