detail page request serves with different recipe request

--- a/server/api/recipe/templates/recipe.html
+++ b/server/api/recipe/templates/recipe.html
@@ -8,7 +8,7 @@
 		<div class="ui link cards">		
 			{% for recipe in data %}
 			<div class="card col-md-4 col-sm-6">
-				<a class="image" href="/recipe/1234">
+				<a class="image" href="/recipe/{{ recipe.id }}">
 					<img src="{{ recipe.image }}">
 				</a>
 				<div class="content">
