--- a/server/api/auth/templates/layout.html
+++ b/server/api/auth/templates/layout.html
@@ -12,6 +12,7 @@
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/profile.css') }}">
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/recipe.css') }}">
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/landing.css') }}">
 	<script type="text/javascript" src="{{ url_for('static', filename='js/lib/jquery-3.3.1.min.js') }}"></script>
 </head>
 <body>
