--- a/server/static/css/landing.css
+++ b/server/static/css/landing.css
@@ -1,28 +1,13 @@
-.video {
-	position: fixed;
-	z-index: -99;
+.videoWrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
 	width: 100%;
 	height: 100%;
-}
-
-#getStarted{
-	padding-top: 350px;
-	text-align: center;
-	font-size: 4em;
-
-}
-
-a {
-	text-decoration: none;
-	opacity: .8;
-}
-a:link {
-    color: white;
-}
-a:visited {
-    color: white;
-}
-
-a:hover {
-    color: hotpink;
 }
